# linalg

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  docs.md  doxygen_crawl.html  error_log.txt  files.html  fpm.toml  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  install-ferror.sh  install_lapack.sh  interfaceblas_1_1ddot-members.html  interfaceblas_1_1dgbmv-members.html  interfaceblas_1_1dgbmv.html  interfaceblas_1_1dgemm-members.html  interfaceblas_1_1dgemm.html  interfaceblas_1_1dgemv.html  interfaceblas_1_1dscal-members.html  interfaceblas_1_1dscal.html  interfaceblas_1_1dtrsm-members.html  interfaceblas_1_1dtrsm.html  interfaceblas_1_1dtrsv-members.html  interfaceblas_1_1dtrsv.html  interfaceblas_1_1zdscal-members.html  interfaceblas_1_1zdscal.html  interfaceblas_1_1zgbmv-members.html  (+273 more)
BLAS/: CMakeLists.txt
LAPACK/: CMakeLists.txt
LAPACK/BLAS/: CMakeLists.txt
cmake/: helper.cmake
configure/: CMakeLists.txt  template.cmake
dependencies/: CMakeLists.txt
dependencies/LAPACK/: CMakeLists.txt
dependencies/QRUpdate/: CMakeLists.txt
dependencies/ferror/: CMakeLists.txt
doc/: C Doxyfile  Doxyfile  index.html  search.html
docs/: Doxyfile  Doxyfile.bak
examples/: CMakeLists.txt  c_linalg_eigen_example.c  c_linalg_lu_example.c  linalg_cholesky_downdate_example.f90  linalg_cholesky_example.f90  linalg_cholesky_update_example.f90  linalg_eigen_c_example.c  linalg_eigen_example.f90  linalg_inverse_example.f90  linalg_lq_example.f90  linalg_lq_full_example.f90  linalg_lq_mult_example.f90  linalg_lu_c_example.c  linalg_lu_example.f90  linalg_lu_example_immutable.f90  linalg_lu_full_example.f90  linalg_od_c_example.c  linalg_od_example.f90  linalg_pinverse_example.f90  linalg_qr_c_example.c  linalg_qr_example.f90  linalg_qr_full_example.f90  linalg_qr_mult_example.f90  linalg_qr_update_example.f90  linalg_sparse_direct_example.f90  linalg_svd_example.f90
include/: linalg.h
install/: CMakeLists.txt  linalgConfig.cmake.in  template.pc
interface/: amub.html  aplb.html  aplsb.html  assignment(=).html  band_mtx_mult.html  band_mtx_to_full_mtx.html  banded_to_dense.html  bndcsr.html  cholesky_rank1_downdate.html  cholesky_rank1_update.html  clncsr.html  coocsr.html  csort.html  csrcsc2.html  csrmsr.html  dch1dn.html  dch1up.html  ddot.html  dgbmv.html  dgeev.html  dgelqf.html  dgels.html  dgelss.html  dgelsy.html  dgemm.html  dgemv.html  dgeqp3.html  dgeqrf.html  dgesv.html  dgesvd.html  dgetrf.html  dgetri.html  dgetrs.html  dggev.html  dggev3.html  diag_mtx_mult.html  dlaic1.html  dlamch.html  dlaset.html  dlasrt.html  (+78 more)
lapack/: CMakeLists.txt
lists/: procedures.html  types.html
module/: blas.html  lapack.html  linalg_basic.html  linalg_c_api.html  linalg_cholesky.html  linalg_eigen.html  linalg_errors.html  linalg_least_squares.html  linalg_qr.html  linalg_rz.html  linalg_sorting.html  linalg_svd.html  linalg_tri.html  qrupdate.html  sparskit.html
proc/: addblk.html  amask.html  amub.html  amubdg.html  amudia.html  amux.html  amuxd.html  amuxe.html  amuxj.html  amuxms.html  aplb.html  aplb1.html  aplbdg.html  apldia.html  aplsb.html  aplsb1.html  aplsbt.html  aplsca.html  apmbt.html  atmux.html  atmuxr.html  banded_to_csr.html  bcg.html  bcgstab.html  bisinit.html  blkchk.html  blkfnd.html  bndcsr.html  brkdn.html  bsrcsr.html  caxcpy.html  cch1dn.html  cch1up.html  cchdex.html  cchinx.html  cchshx.html  cg.html  cgnr.html  cgqvec.html  clncsr.html  (+253 more)
search/: all_0.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_2.js  classes_8.js  functions_2.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_3.js  variables_7.js
sourcefile/: blas.f90.html  blassm.f.html  caxcpy.f.html  cch1dn.f.html  cch1up.f.html  cchdex.f.html  cchinx.f.html  cchshx.f.html  cgqvec.f.html  clu1up.f.html  clup1up.f.html  cqhqr.f.html  cqr1up.f.html  cqrdec.f.html  cqrder.f.html  cqrinc.f.html  cqrinr.f.html  cqrot.f.html  cqrqh.f.html  cqrshc.f.html  cqrtv1.f.html  dch1dn.f.html  dch1up.f.html  dchdex.f.html  dchinx.f.html  dchshx.f.html  dgqvec.f.html  distdot.f.html  dlu1up.f.html  dqhqr.f.html  (+69 more)
src/: CMakeLists.txt  blas.f90  cholesky.f90  cqrtv1.f  dqrqh.f  dqrtv1.f  error_flags.f90  lapack.f90  linalg.f90  linalg_basic.f90  linalg_c_api.f90  linalg_c_binding.f90  linalg_cholesky.f90  linalg_constants.f90  linalg_core.f90  linalg_eigen.f90  linalg_factor.f90  linalg_immutable.f90  linalg_inverse.f90  linalg_lq.f90  linalg_lu.f90  linalg_qr.f90  linalg_rz.f90  linalg_solve.f90  linalg_sorting.f90  linalg_sparse.f90  linalg_svd.f90  linalg_tri.f90  linear_algebra.f90  lu.f90  matvec.f  qr.f90  qrupdate.f90  rz.f90  schdex.f  schinx.f  sgqvec.f  sparskit.f90  sqr1up.f  sqrqh.f  (+6 more)
src/QRUPDATE/: dlup1up.f  dqr1up.f
src/qrupdate/: caxcpy.f  cch1dn.f  cchinx.f  cchshx.f  cgqvec.f  cqrinr.f  cqrot.f  cqrqh.f  dchdex.f  dchshx.f  dlu1up.f  dqrder.f  dqrshc.f  sch1dn.f  sch1up.f  schshx.f  slup1up.f  sqhqr.f  sqrder.f  sqrot.f  sqrshc.f  sqrtv1.f  zch1dn.f  zch1up.f  zgqvec.f  zqr1up.f  zqrinr.f  zqrot.f  zqrqh.f  zqrshc.f
src/sparskit2/: blassm.f  distdot.f  formats.f  ilut.f  iters.f  unary.f
tests/: CMakeLists.txt  c_linalg_test.c  c_linalg_test.h  c_linalg_test_eigen.c  c_linalg_test_factor.c  c_linalg_test_misc.c  c_test_core.c  c_test_core.h  c_test_eigen.c  c_test_inv.c  c_test_lu.c  c_test_misc.c  c_test_qr.c  c_test_sort.c  c_test_svd.c  linalg_c_test.c  linalg_test.f90  test.f90  test_cholesky.f90  test_core.f90  test_eigen.f90  test_immutable.f90  test_lq.f90  test_lu.f90  test_misc.f90  test_mtx_inverse.f90  test_qr.f90  test_sort.f90  test_sparse.f90  test_svd.f90
tests/fortran_test_helper/: CMakeLists.txt
tests_c/: CMakeLists.txt  c_linalg_test.c  c_linalg_test.h  c_linalg_test_eigen.c  c_linalg_test_misc.c
(+1431 files in other folders)
